refactor LemmaOccurenceInSentencesDTO to class and add logging to SentenceServiceImpl